[tool.poetry]
name = "streams-explorer"
version = "1.3.0"
description = "Explore Data Pipelines in Apache Kafka."
readme = "../README.md"
authors = ["bakdata"]
repository = "https://github.com/bakdata/streams-explorer"
license = "MIT"
keywords = ["kafka", "kubernetes", "stream-processing", "monitoring", "pipelines"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Intended Audience :: Developers",
    "Typing :: Typed",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/bakdata/streams-explorer/issues"

[tool.poetry.dependencies]
python = "^3.8"
kubernetes = "^17.17.0"
loguru = "^0.5.3"
matplotlib = "^3.4.2"
networkx = "^2.6.1"
dynaconf = "^3.1.4"
httpx = "^0.18.2"
pydantic = "^1.8.2"
fastapi-utils = "^0.2.1"
fastapi = "^0.66.1"
uvicorn = "^0.14.0"
aiofiles = "^0.7.0"
pygraphviz = "^1.7"
confluent-kafka = "^1.7.0"
cachetools = "^4.2.2"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
flake8 = "^3.9.2"
black = "^21.7b0"
isort = "^5.9.2"
pytest = "^6.2.4"
pre-commit = "^2.13.0"
pytest-asyncio = "^0.15.1"
pytest-clarity = "^1.0.1"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"
nest-asyncio = "^1.5.1"
respx = "^0.17.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
