[tool.poetry]
name = "streams-explorer"
version = "2.4.0"
description = "Explore Data Pipelines in Apache Kafka."
readme = "README.md"
authors = ["bakdata"]
repository = "https://github.com/bakdata/streams-explorer"
license = "MIT"
keywords = ["kafka", "kubernetes", "stream-processing", "monitoring", "pipelines"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development",
  "Intended Audience :: Developers",
  "Typing :: Typed",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/bakdata/streams-explorer/issues"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.5.3"
matplotlib = "^3.4.3"
networkx = "^2.6.3"
dynaconf = "^3.1.7"
httpx = "^0.23.1"
pydantic = "^1.9.1"
fastapi-utils = "^0.2.1"
fastapi = "^0.103.1"
uvicorn = { extras = ["standard"], version = "^0.20.0" }
pygraphviz = "^1.10"
confluent-kafka = "2.4.0"
cachetools = "^4.2.2"
kubernetes-asyncio = "^23.6.0"

[tool.poetry.group.dev.dependencies]
mypy = "^0.981"
flake8 = "^4.0.1"
black = "^22.6.0"
isort = "^5.12.0"
pytest = "^7.2.0"
pre-commit = "^2.15.0"
pytest-asyncio = "^0.20.1"
pytest-clarity = "^1.0.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.6.1"
respx = "^0.20.1"
requests = "^2.27.1"

[tool.poetry.scripts]
start = "main:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
